[gd_scene load_steps=6 format=3 uid="uid://dp2aay1f31ek8"]

[ext_resource type="Script" uid="uid://bqog12ktm17hx" path="res://scenes/ui/mainMenu/mainMenu.gd" id="1_3oxb4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wx4k7"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 30.0
expand_margin_top = 30.0
expand_margin_right = 30.0
expand_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vtvwi"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.129412, 0.129412, 0.129412, 0.419608)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="Animation" id="Animation_jpejd"]
resource_name = "loop"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/VBoxContainer/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Connecting to server.", "Connecting to server..", "Connecting to server..."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6cyr1"]
_data = {
&"loop": SubResource("Animation_jpejd")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_3oxb4")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -20.0
offset_right = -10.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="LevelContainer2" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wx4k7")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LevelContainer2"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/LevelContainer2/VBoxContainer"]
layout_mode = 2
text = "Main-Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainLevelList" type="ItemList" parent="HBoxContainer/LevelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_width = true
item_count = 3
item_0/text = "Level 0"
item_1/text = "Level 1"
item_2/text = "Level 2"

[node name="LevelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wx4k7")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LevelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/LevelContainer/VBoxContainer"]
layout_mode = 2
text = "Labyrinth-Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabyrinthLevelList" type="ItemList" parent="HBoxContainer/LevelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
auto_width = true
item_count = 3
item_0/text = "Level 0"
item_1/text = "Level 1"
item_2/text = "Level 2"

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(215, 75)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -159.0
offset_right = 112.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vtvwi")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Connecting to server."
vertical_alignment = 1

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Start Server"

[node name="connectTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6cyr1")
}
autoplay = "loop"

[connection signal="item_selected" from="HBoxContainer/LevelContainer2/VBoxContainer/MainLevelList" to="." method="_on_main_level_list_item_selected"]
[connection signal="item_selected" from="HBoxContainer/LevelContainer/VBoxContainer/LabyrinthLevelList" to="." method="_on_labyrinth_level_list_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_hostDebugButton_pressed"]
[connection signal="timeout" from="connectTimer" to="." method="_on_connect_timer_timeout"]
